--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    body {
+      background-color: #14161b;
+    }
+  }
+  
+  .slick-slide > div {
+    margin: 0 10px;
+  }
+  
+  .slick-dots li.slick-active button:before {
+    color: orange !important;
+  }
