--- a/src/app/components/carousel.module.css
+++ b/src/app/components/carousel.module.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-/* 
 @layer base {
     body {
       background-color: #14161b;
@@ -14,4 +10,4 @@
   
   .slick-dots li.slick-active button:before {
     color: orange !important;
-  } */
+  }
